fix: fix overflow

--- a/Medify/src/index.css
+++ b/Medify/src/index.css
@@ -22,3 +22,7 @@ body {
 *::after {
   box-sizing: border-box;
 }
+
+* {
+  max-width: 100%;
+}
